clear button will clear colored squares

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <div id='container'>
-        
+        <div>
+            <header>
+                <button id='clearButton'>Clear Grid</button>
+            </header>
         </div>
+        <div id='container'> </div>
     </body>
     <script src='script.js'></script>
 </html>
